# Stacklift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  versions.tf
.github/workflows/: lint.yml  release.yml
cli/: README.md  pyproject.toml
cli/stacklift/: main.py  prompts.py  scaffold.py  utils.py  validators.py
cli/stacklift/templates/: backend.tf.j2  deploy.yml.j2  main.tf.j2  terraform.tfvars.j2  variables.tf.j2
cli/tests/: test_prompts.py  test_scaffold.py  test_validators.py
docs/: cli-reference.md  faq.md  getting-started.md  module-reference.md  pro-tier.md
docs/tutorials/: deploy-django-saas-in-30-minutes.md
examples/django-celery-postgres/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/django-celery-postgres/.github/workflows/: deploy.yml
examples/fastapi-postgres/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
modules/alb/: README.md  main.tf  outputs.tf  variables.tf
modules/cicd/: README.md  main.tf  outputs.tf  variables.tf
modules/ecr/: README.md  main.tf  outputs.tf  variables.tf
modules/ecs-cluster/: README.md  main.tf  outputs.tf  variables.tf
modules/ecs-service/: README.md  main.tf  outputs.tf  variables.tf
modules/rds/: README.md  main.tf  outputs.tf  variables.tf
modules/secrets/: README.md  main.tf  outputs.tf  variables.tf
modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
