[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacklift"
version = "0.1.0"
description = "Scaffold production AWS infrastructure for Django and FastAPI in minutes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Prabhat", email = "emanthen@gmail.com" }]
keywords = ["aws", "terraform", "django", "fastapi", "devops", "ecs", "fargate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "jinja2>=3.1.0",
]

[project.scripts]
stacklift = "stacklift.main:app"

[project.urls]
Homepage = "https://github.com/emanthen/Stacklift"
Issues   = "https://github.com/emanthen/Stacklift/issues"

[tool.hatch.build.targets.wheel]
packages = ["stacklift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["stacklift"]
omit   = ["tests/*"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
]
